--- a/template/document.tex
+++ b/template/document.tex
@@ -1,7 +1,11 @@
-% Use the Article styling on A4 paper
-\documentclass[]{article}
+\documentclass[11pt]{scrartcl}
+\usepackage[]{helvet}
+\renewcommand\familydefault{\sfdefault}
+
+%Package for graphics
+\usepackage{graphicx}
 \begin{document}
+\includegraphics[width=2.3cm]{assets/fomLogo}
 
-test
-
+My first \TeX~document. 
 \end{document}
