--- a/template/document.tex
+++ b/template/document.tex
@@ -1,11 +1,23 @@
+%set the fontsize and start
 \documentclass[11pt]{scrartcl}
+
+%set the font
 \usepackage[]{helvet}
+
+%renewcommand to apply the font
 \renewcommand\familydefault{\sfdefault}
 
 %Package for graphics
 \usepackage{graphicx}
+
+%start the document
 \begin{document}
+
+%display the fom graphic
 \includegraphics[width=2.3cm]{assets/fomLogo}
 
+%some random text
 My first \TeX~document. 
+
+%end of document
 \end{document}
