--- a/template/document.tex
+++ b/template/document.tex
@@ -1,5 +1,5 @@
 %set the fontsize and start
-\documentclass[11pt]{scrartcl}
+\documentclass[11pt]{article}
 
 %set the font
 \usepackage[]{helvet}
@@ -10,14 +10,40 @@
 %Package for graphics
 \usepackage{graphicx}
 
+%Package for Umlaute
+\usepackage[utf8]{inputenc}
+
 %start the document
 \begin{document}
 
-%display the fom graphic
-\includegraphics[width=2.3cm]{assets/fomLogo}
+%center the logo and display the FOM graphic
+\begin{center}
+	\includegraphics[width=2.3cm]{assets/fomLogo.pdf}\\
+	%strong text
+	\textbf{FOM Hochschule für Ökonomie und Management}
+	\newline
+	\newline
+	Hochschulzentrum München
+\end{center}
 
-%some random text
-My first \TeX~document. 
 
+\begin{center}
+	\textbf{Seminararbeit}\\
+	Im Rahmen des Moduls\\
+	Arbeitsmethoden und Softwareunterstützung\\
+	Über das Thema\\
+	\textbf{Mein Thema}\\
+	von\\
+	Vorname Nachname\\
+\end{center}
+
+\begin{flushleft}
+			                        
+	Gutachter: Dozent       \\
+	Matrikelnummer: 1234567 \\ 
+	Abgabedatum: TT.MM.JJJJ \\
+\end{flushleft}
+		
+	
 %end of document
 \end{document}
