--- a/template/document.tex
+++ b/template/document.tex
@@ -16,34 +16,8 @@
 %start the document
 \begin{document}
 
-%center the logo and display the FOM graphic
-\begin{center}
-	\includegraphics[width=2.3cm]{assets/fomLogo.pdf}\\
-	%strong text
-	\textbf{FOM Hochschule für Ökonomie und Management}
-	\newline
-	\newline
-	Hochschulzentrum München
-\end{center}
+%titlepage
+\input{titlepage}
 
-
-\begin{center}
-	\textbf{Seminararbeit}\\
-	Im Rahmen des Moduls\\
-	Arbeitsmethoden und Softwareunterstützung\\
-	Über das Thema\\
-	\textbf{Mein Thema}\\
-	von\\
-	Vorname Nachname\\
-\end{center}
-
-\begin{flushleft}
-			                        
-	Gutachter: Dozent       \\
-	Matrikelnummer: 1234567 \\ 
-	Abgabedatum: TT.MM.JJJJ \\
-\end{flushleft}
-		
-	
 %end of document
 \end{document}
