added titlepage comments

--- a/template/titlepage.tex
+++ b/template/titlepage.tex
@@ -1,3 +1,4 @@
+%variableto fill
 \newcommand{\Thema}{Mein Thema}
 \newcommand{\Name}{vorname nachname}
 \newcommand{\Gutachter}{Dozent}
@@ -16,10 +17,12 @@
 		\vspace{.5cm}
 		Hochschulzentrum München
 	\end{center}
-																											
+						
+	%create big space
 	\bigskip	
-																												
+																														
 	\begin{center}
+		%bold text
 		\textbf{Seminararbeit}\\
 		\vspace{0.2cm}
 		Im Rahmen des Moduls\\
@@ -28,18 +31,20 @@
 		\vspace{2cm}
 		Über das Thema\\
 		\vspace{0.5cm}
+		%bold text
 		\textbf{\Thema}\\
 		\vspace{0.5cm}
 		von\\
 		\vspace{0.5cm}
 		\Name\\
 	\end{center}
-																																												
+				
+	%postion in bottom left
 	\begin{figure}[b]
-																																																																																															                        
+																																																																																																			                        
 		Gutachter: \Gutachter       \\
 		Matrikelnummer: \Matrikelnummer \\ 
 		Abgabedatum: \Abgabedatum 
 	\end{figure}
-																																														
+																																																
 \end{titlepage}
