--- a/template/document.tex
+++ b/template/document.tex
@@ -1,5 +1,8 @@
 %set the fontsize and start
 \documentclass[11pt]{article}
+%set papersheet and margins
+\usepackage[a4paper,left=30mm,right=30mm,top=30mm, bottom=30mm]{geometry}
+
 
 %set the font
 \usepackage[]{helvet}
@@ -18,6 +21,11 @@
 
 %titlepage
 \input{titlepage}
+
+\newpage
+
+%inhaltsverzeichnis
+\input{inhaltsverzeichnis}
 
 %end of document
 \end{document}
