--- a/Raeyeon/titlepage.tex
+++ b/Raeyeon/titlepage.tex
@@ -60,7 +60,6 @@
 		\end{flushleft}
 		
 		
-		
 		\newpage
         \thispagestyle{empty}       
         \mbox{}
@@ -99,3 +98,5 @@
 	
 	
 \newpage
+
+\tableofcontents
