--- a/Raeyeon/titlepage.tex
+++ b/Raeyeon/titlepage.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage[utf8]{inputenc}
+\usepackage[cm]{fullpage}
 \usepackage[a4paper,left=30mm,right=30mm,top=30mm, bottom=30mm]{geometry}
 \usepackage{amsmath}
 \usepackage{mathtools}
@@ -96,7 +97,13 @@
 %	\glsresetall
 	% start of mainmatter
 	
-	
+
+\usepackage[top=4cm, bottom=2cm, left=4cm, right=2cm]{geometry}
+
+
 \newpage
+
+
+
 
 \tableofcontents
