--- a/template/inhaltsverzeichnis.tex
+++ b/template/inhaltsverzeichnis.tex
@@ -1,1 +1,12 @@
-hallo
+%-----------------------------------
+% Inhaltsverzeichnis
+%-----------------------------------
+% Um das Tabellen- und Abbbildungsverzeichnis zu de/aktivieren ganz oben in Documentclass schauen
+\setcounter{page}{2}
+\addtocontents{toc}{\protect\enlargethispage{-20mm}}% Die Zeile sorgt dafür, dass das Inhaltsverzeichnisseite auf die zweite Seite gestreckt wird und somit schick aussieht. Das sollte eigentlich automatisch funktionieren. Wer rausfindet wie, kann das gern ändern.
+\setcounter{tocdepth}{4}
+\tableofcontents
+\newpage
+
+\addtocontents{toc}{\setcounter{tocdepth}{1}}
+\section{A section}
