--- a/template/document.tex
+++ b/template/document.tex
@@ -1,5 +1,5 @@
 %set the fontsize and start
-\documentclass[11pt]{article}
+\documentclass[12pt,oneside,titlepage,listof=totoc,bibliography=totoc]{scrartcl}
 %set papersheet and margins
 \usepackage[a4paper,left=30mm,right=30mm,top=30mm, bottom=30mm]{geometry}
 
