--- a/template/document.tex
+++ b/template/document.tex
@@ -2,7 +2,7 @@
 \documentclass[12pt,oneside,titlepage,listof=totoc,bibliography=totoc]{scrartcl}
 %set papersheet and margins
 \usepackage[a4paper,left=30mm,right=30mm,top=30mm, bottom=30mm]{geometry}
-
+\usepackage{german}
 
 %set the font
 \usepackage[]{helvet}
