--- a/template/document.tex
+++ b/template/document.tex
@@ -33,7 +33,6 @@
 \usepackage[utf8]{inputenc}
 
 
-
 %start the document
 \begin{document}
 
@@ -45,7 +44,7 @@
 	\fancyhf{} % clear all header and footer fields
 	\fancyhead{} % clear all header fields
 	\fancyfoot{} % clear all footer fields
-	\fancyhead[C]{\textcolor{gray}\thepage}
+	\fancyhead[C]{\textcolor{gray}\thepage} 
 	\renewcommand{\headrulewidth}{0pt}
 	\renewcommand{\footrulewidth}{0pt}
 }
@@ -59,11 +58,29 @@
 \input{inhaltsverzeichnis}
 %abbildungen
 \input{abbildungsverzeichnis}
-\newpage
-%tabellen
 \input{tabellenverzeichnis}
-\newpage
+%tabellen
 %symbole und formeln
-\input{formelverezeichnis}
+\input{formel-symbolverzeichnis}
+
+\newpage
+
+%reset pagestyle to continue with arabic numbering
+\pagestyle{plain}
+%pagenumbering
+\fancypagestyle{plain}{%
+	\fancyhf{} % clear all header and footer fields
+	\fancyhead{} % clear all header fields
+	\fancyfoot{} % clear all footer fields
+	\fancyhead[C]{\textcolor{gray}\thepage}
+	\renewcommand{\headrulewidth}{0pt}
+	\renewcommand{\footrulewidth}{0pt}
+}
+\pagenumbering{arabic}
+
+\input{01_einleitung/einleitung}
+\input{02_hauptteil/hauptteil}
+\input{03_schluss/schluss}
+
 %end of document
 \end{document}
