--- a/template/02_hauptteil/hauptteil.tex
+++ b/template/02_hauptteil/hauptteil.tex
@@ -41,7 +41,10 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 At vero eos et accusam et justo duo dolores et ea rebum. 
 Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
 Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. 
+At vero eos et accusam et justo duo dolores et ea rebum.
+\newline 
+\includegraphics{figures/Architektur.jpg}
+\newline
 Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large. 
 One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes. 
 The built-in norms should, as far as possible, be understood and commonly shared.
