--- a/template/02_hauptteil/hauptteil.tex
+++ b/template/02_hauptteil/hauptteil.tex
@@ -43,8 +43,13 @@ Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit ame
 Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
 At vero eos et accusam et justo duo dolores et ea rebum.
 \newline 
-\includegraphics{figures/Architektur.jpg}
-\newline
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics{figures/Architektur.jpg}
+	\caption[Architektur]{Quelle: Martínez-Díaz, M./Soriguera, F./Pérez, I., Autonomous driving: a bird's eye view, 2019, S. 564.}
+\end{figure}
+
 Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large. 
 One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes. 
 The built-in norms should, as far as possible, be understood and commonly shared.
