added lof & corrected style

--- a/template/02_hauptteil/hauptteil.tex
+++ b/template/02_hauptteil/hauptteil.tex
@@ -44,10 +44,13 @@ Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur s
 At vero eos et accusam et justo duo dolores et ea rebum.
 \newline 
 
-\begin{figure}[ht]
+
+\begin{figure}
+	\caption[Architektur]{Architektur}
 	\centering
-	\includegraphics{figures/Architektur.jpg}
-	\caption[Architektur]{Quelle: Martínez-Díaz, M./Soriguera, F./Pérez, I., Autonomous driving: a bird's eye view, 2019, S. 564.}
+	\includegraphics[]{assets/figures/Architektur.jpg}
+									
+	Quelle: Martínez-Díaz, M./Soriguera, F./Pérez, I., Autonomous driving: a bird's eye view, 2019, S. 564.	
 \end{figure}
 
 Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large. 
