--- a/template/document.tex
+++ b/template/document.tex
@@ -1,5 +1,6 @@
 %use scrbook and set dotted line
 \documentclass[toc=chapterentrywithdots,openany]{scrbook}
+
 %use a4paper for a4 paper and size 
 \usepackage[a4paper,left=30mm,right=30mm,top=30mm, bottom=30mm]{geometry}
 %use german
@@ -8,18 +9,26 @@
 %https://tex.stackexchange.com/questions/349473/suppress-warning-usage-of-package-fancyhdr-togetherscrbook-with-a-koma-scr
 \usepackage{silence}
 \WarningFilter{scrbook}{Usage of package `fancyhdr'}
+%use catption for setup
+\usepackage{caption}
+%set the caption to the left side
+\captionsetup{justification=raggedright,singlelinecheck=false}
 
 %reset the counter to have no chapter numberings
 \setcounter{figure}{0}
 \renewcommand{\thefigure}{\arabic{figure}}
 
+%reset the figure name
+\renewcommand{\figurename}{Bild}
+
 %add prefix to the figure name
 \usepackage{titletoc}
 \titlecontents{figure}[0mm]%
-    {\makebox{Bild: ~}}%
-    {\makebox{\thecontentslabel\quad}}%
+    {Bild }%
+    {\thecontentslabel\quad: ~}%
     {}%
     {\enspace\dotfill\enspace\thecontentspage}
+
 
 %use colorpackage to set font colors
 \usepackage{xcolor}
@@ -73,7 +82,6 @@
 %tabellen
 %symbole und formeln
 \input{formel-symbolverzeichnis}
-
 
 \newpage
 
