--- a/template/document.tex
+++ b/template/document.tex
@@ -1,106 +1,43 @@
 %use scrbook and set dotted line
 \documentclass[toc=chapterentrywithdots,openany]{scrbook}
+%stores all imports
+\input{packages.tex}
 
-%use a4paper for a4 paper and size 
-\usepackage[a4paper,left=30mm,right=30mm,top=30mm, bottom=30mm]{geometry}
-%use german
-\usepackage{german}
-%silence a not relevant warning
-%https://tex.stackexchange.com/questions/349473/suppress-warning-usage-of-package-fancyhdr-togetherscrbook-with-a-koma-scr
-\usepackage{silence}
-\WarningFilter{scrbook}{Usage of package `fancyhdr'}
-%use catption for setup
-\usepackage{caption}
 %set the caption to the left side
 \captionsetup{justification=raggedright,singlelinecheck=false}
 
-%reset the counter to have no chapter numberings
-\setcounter{figure}{0}
-\renewcommand{\thefigure}{\arabic{figure}}
+%options for figures
+\input{listoffigures.tex}
+%options for tables
+\input{listoftables.tex}
 
-%reset the figure name
-\renewcommand{\figurename}{Bild}
-
-%add prefix to the figure name
-\usepackage{titletoc}
-\titlecontents{figure}[0mm]%
-    {Bild }%
-    {\thecontentslabel\quad: ~}%
-    {}%
-    {\enspace\dotfill\enspace\thecontentspage}
-
-
-%use colorpackage to set font colors
-\usepackage{xcolor}
-%use fancyhdr to set the header
-\usepackage{fancyhdr}
-%use helvetica font
-\usepackage[]{helvet}
-%use tocbibind to see the toc in the toc
-\usepackage{tocbibind}
-%user hyperref to add links
-\usepackage{hyperref}
-%use graphicx to add images
-\usepackage{graphicx}
-%path for the images
-\graphicspath{{figures/ }}
 %renewcommand to apply the font
 \renewcommand\familydefault{\sfdefault}
-
-%use graphicx to add images
-\usepackage{graphicx}
-
-%use inputenc to set the encoding
-\usepackage[utf8]{inputenc}
 
 %start the document
 \begin{document}
 
 %titlepage
-\input{titlepage}
-
-%pagenumbering
-\fancypagestyle{plain}{%
-	\fancyhf{} % clear all header and footer fields
-	\fancyhead{} % clear all header fields
-	\fancyfoot{} % clear all footer fields
-	\fancyhead[C]{\textcolor{gray}\thepage} 
-	\renewcommand{\headrulewidth}{0pt}
-	\renewcommand{\footrulewidth}{0pt}
-}
-%use roman for the page number
-\pagenumbering{Roman}
-%set the toc to 2
-\setcounter{page}{2}
-
-
+\input{titlepage.tex}
 %inhaltsverzeichnis
-\input{inhaltsverzeichnis}
-%abbildungen
-\input{abbildungsverzeichnis}
-\input{tabellenverzeichnis}
-%tabellen
-%symbole und formeln
-\input{formel-symbolverzeichnis}
+\input{inhaltsverzeichnis.tex}
+
+%Inhaltsverzeichnis
+\tableofcontents
+
+%abbildungen & tabellen
+\listoffigures
+\listoftables
 
 \newpage
 
-%reset pagestyle to continue with arabic numbering
-\pagestyle{plain}
-%pagenumbering
-\fancypagestyle{plain}{%
-	\fancyhf{} % clear all header and footer fields
-	\fancyhead{} % clear all header fields
-	\fancyfoot{} % clear all footer fields
-	\fancyhead[C]{\textcolor{gray}\thepage}
-	\renewcommand{\headrulewidth}{0pt}
-	\renewcommand{\footrulewidth}{0pt}
-}
-\pagenumbering{arabic}
+\input{pagestyle.tex}
 
-\input{01_einleitung/einleitung}
-\input{02_hauptteil/hauptteil}
-\input{03_schluss/schluss}
+%start
+\input{01_einleitung/einleitung.tex}
+\input{02_hauptteil/hauptteil.tex}
+\input{03_schluss/schluss.tex}
+%end
 
 %end of document
 \end{document}
