--- a/template/pagestyle.tex
+++ b/template/pagestyle.tex
@@ -1,13 +1,12 @@
+%reset pagestyle to continue with arabic numbering
+\pagestyle{plain}
 %pagenumbering
 \fancypagestyle{plain}{%
 	\fancyhf{} % clear all header and footer fields
 	\fancyhead{} % clear all header fields
 	\fancyfoot{} % clear all footer fields
-	\fancyhead[C]{\textcolor{gray}\thepage} 
+	\fancyhead[C]{\textcolor{gray}\thepage}
 	\renewcommand{\headrulewidth}{0pt}
 	\renewcommand{\footrulewidth}{0pt}
 }
-%use roman for the page number
-\pagenumbering{Roman}
-%set the toc to 2
-\setcounter{page}{2}
+\pagenumbering{arabic}
