--- a/template/titlepage.tex
+++ b/template/titlepage.tex
@@ -1,9 +1,9 @@
 %variableto fill
-\newcommand{\Thema}{Mein Thema}
-\newcommand{\Name}{vorname nachname}
-\newcommand{\Gutachter}{Dozent}
-\newcommand{\Matrikelnummer}{123456}
-\newcommand{\Abgabedatum}{01.01.2000}
+\newcommand{\Thema}{Künstliche Intelligenz im Dienste der Unternehmen - Auswirkungen auf den Arbeitsmarkt}
+\newcommand{\Name}{Yakup Furkan Eker}
+\newcommand{\Gutachter}{Herr Dr. Bauer}
+\newcommand{\Matrikelnummer}{594919}
+\newcommand{\Abgabedatum}{10.01.2022}
 
 
 
