--- a/template/titlepage.tex
+++ b/template/titlepage.tex
@@ -1,8 +1,8 @@
 %variableto fill
-\newcommand{\Thema}{Umwelteffekte des autonomen Fahrens}
-\newcommand{\Name}{Julian Türner}
+\newcommand{\Thema}{Mein Thema}
+\newcommand{\Name}{Vorname nachname}
 \newcommand{\Gutachter}{Dr. Herbert Bauer}
-\newcommand{\Matrikelnummer}{581388}
+\newcommand{\Matrikelnummer}{123456}
 \newcommand{\Abgabedatum}{09.01.2022}
 
 
