--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -1,35 +1,56 @@
 \chapter{Einleitung der Arbeit}
 
-\section{Hintergrund und Ausgangssituation}
+\section{Forschungsfrage}
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum.\footnote{Vgl. Martínez-Díaz, M./Soriguera, F./Pérez, I., Autonomous driving: a bird's eye view, 2019, S. 563} 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large. 
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes. 
-The built-in norms should, as far as possible, be understood and commonly shared.\footnote{Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 557.}
-\section{Forschungsziel, Forschungsfrage und These}
+Welche Auswirkungen haben Kraftfahrzeuge auf die Umwelt und wie kann autonomes Fahren die negativen Auswirkungen reduzieren?
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum.\footnote{Vgl. Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 558.} 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. \footnote{Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 557.}
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large. 
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes. 
-The built-in norms should, as far as possible, be understood and commonly shared.
+\section{Hypothese}
+
+Je mehr Fahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kfz aus.
 
 
 
-\section{Aufbau der Arbeit}
+\section{TBD}
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. \footnote{Vgl. Martínez-Díaz, M./Soriguera, F./Pérez, I., Autonomous driving: a bird's eye view, 2019, S. 563}
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large. 
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes. 
-The built-in norms should, as far as possible, be understood and commonly shared.
+-Kraftfahrzeuge einfluss auf die Umwelt
+-steigende Zulassung bei Fahrzeugen durch steigende Globalisierung
+-steigende Temperaturen, Feinstaubbelastung
+-steigende CO2-Emissionen durch Kfz
+-durch bessere Fertigungsmethoden gibt es mehr Autos
+-Umweltbelastung durch Umwege
+-Umweltbelastung durch Fahrfehler
+-Umweltbelastung durch Kfz-Fahrer
+-Umweltbelastung durch Staus
+-Umweltbelastung durch LKW
+
+\section{Definitionen}
+\subsection{Kraftfahrzeuge}
+
+\textit{Als Kraftfahrzeuge im Sinne dieses Gesetzes gelten Landfahrzeuge, die durch Maschinenkraft bewegt werden, ohne an Bahngleise gebunden zu sein.}
+\footnote{§ 1 Abs. 2 Straßenverkehrsgesetz}
+\newline
+\newline
+Kraftfahrzeuge können in folgende Kategorien eingeteilt werden:
+\begin{itemize}
+	\item Personenkraftwagen
+	\item Nutzfahrzeuge
+	\item Krafträder
+	\item Anhänger
+	\item Wohnmobil
+	\item Militärfahrzeuge
+	\item Sonderfahrzeuge
+\end{itemize}
+	      	      	      	      	      
+	      	      	      	      	      
+\subsection{Autonomes Fahren}
+	      	      	      	      	      
+Hier wird erklärt was Autonomes Fahren ist
+	      	      	      	      	      
+	      	      	      	      	      
+\subsection{Umwelteinflüsse}
+	      	      	      	      	      
+Hier wird erklärt was Umwelteinflüsse sind
+\subsubsection{Feinstaubbelastung}
+Was ist eine Feinstaubbelastung?
+\subsubsection{Co2 Emissionen}
+Was ist Co2 Emission?
