--- a/template/packages.tex
+++ b/template/packages.tex
@@ -17,7 +17,7 @@
 %use helvetica font
 \usepackage[]{helvet}
 %use tocbibind to see the toc in the toc
-\usepackage{tocbibind}
+\usepackage[nottoc,notlot,notlof]{tocbibind}
 %user hyperref to add links
 \usepackage{hyperref}
 %use graphicx to add images
