removed koma script

--- a/template/document.tex
+++ b/template/document.tex
@@ -13,7 +13,7 @@
 
 %renewcommand to apply the font
 \renewcommand\familydefault{\sfdefault}
-
+\setuptoc{toc}{totoc}
 %start the document
 \begin{document}
 
