--- a/template/titlepage.tex
+++ b/template/titlepage.tex
@@ -1,8 +1,8 @@
 %variableto fill
-\newcommand{\Thema}{Mein Thema}
-\newcommand{\Name}{Vorname nachname}
+\newcommand{\Thema}{Umwelteffekte des autonomen Fahrens}
+\newcommand{\Name}{Julian Türner}
 \newcommand{\Gutachter}{Dr. Herbert Bauer}
-\newcommand{\Matrikelnummer}{123456}
+\newcommand{\Matrikelnummer}{581388}
 \newcommand{\Abgabedatum}{09.01.2022}
 
 
@@ -18,13 +18,13 @@
 		\begin{Large}\textbf{FOM Hochschule für Ökonomie und Management}\end{Large}\\
 		\vspace{.5cm}
 		Hochschulzentrum München
-																														
+
 		\vspace{2cm}
 	\end{center}
-																												
+
 	%create big space
-	\bigskip	
-																																																				
+	\bigskip
+
 	\begin{center}
 		%bold text
 		\textbf{Seminararbeit}\\
@@ -37,19 +37,19 @@
 		\vspace{0.5cm}
 		%bold text
 		\begin{Large}\textbf{\textbf{\Thema}}\end{Large}\\
-																												
+
 		\vspace{2cm}
 		von\\
 		\vspace{0.5cm}
 		\begin{Large}\textbf{\textbf{\Name}}\end{Large}\\
 	\end{center}
-																										
+
 	%postion in bottom left
 	\begin{figure}[b]
-																																																																																																																																															                        
+
 		Gutachter: \Gutachter       \\
-		Matrikelnummer: \Matrikelnummer \\ 
-		Abgabedatum: \Abgabedatum 
+		Matrikelnummer: \Matrikelnummer \\
+		Abgabedatum: \Abgabedatum
 	\end{figure}
-																																																																						
+
 \end{titlepage}
