Updated some questions

--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -45,12 +45,20 @@ Kraftfahrzeuge können in folgende Kategorien eingeteilt werden:
 \subsection{Autonomes Fahren}
 	      	      	      	      	      
 Hier wird erklärt was Autonomes Fahren ist
+Was ist autonom 
+Welche Stufen gibt es
+Welche Systeme gibt es
 	      	      	      	      	      
 	      	      	      	      	      
 \subsection{Umwelteinflüsse}
 	      	      	      	      	      
 Hier wird erklärt was Umwelteinflüsse sind
+Umwelteinflüsse wie Abgas, Lärm, Feinstaub, Licht
+
 \subsubsection{Feinstaubbelastung}
 Was ist eine Feinstaubbelastung?
+Durch natürliche Art oder menschliche erzeugt
 \subsubsection{Co2 Emissionen}
-Was ist Co2 Emission?
+Was ist Co2?
+Was sind CO2 Emissionen?
+Natürliche CO2 Emissionen oder menschliche CO2 Emissionen
