--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -27,31 +27,83 @@ Je mehr Fahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung d
 \subsection{Kraftfahrzeuge}
 
 \textit{Als Kraftfahrzeuge im Sinne dieses Gesetzes gelten Landfahrzeuge, die durch Maschinenkraft bewegt werden, ohne an Bahngleise gebunden zu sein.}
-\footnote{§ 1 Abs. 2 Straßenverkehrsgesetz}
+\footnote{Straßenverkehrsgesetz, § 1 Abs. 2}
 \newline
 \newline
-Kraftfahrzeuge können in folgende Kategorien eingeteilt werden:
+Kraftfahrzeuge können in folgende Kategorien eingeteilt werden\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
+	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}:
 \begin{itemize}
-	\item Personenkraftwagen
-	\item Nutzfahrzeuge
-	\item Krafträder
-	\item Anhänger
-	\item Wohnmobil
-	\item Militärfahrzeuge
-	\item Sonderfahrzeuge
+	\item Klasse M (Vorwiegend für die Beförderung von Fahrgästen und deren Gepäck ausgelegte und gebaute Kraftfahrzeuge)
+	\item Klasse N (Vorwiegend für die Beförderung von Gütern ausgelegte und gebaute Kraftfahrzeuge.)
+	\item Klasse O (Anhänger, die sowohl für die Beförderung von Gütern und Fahrgästen als auch für die Unterbringung von Personen ausgelegt und gebaut sind.)
+	\item Klasse S (unvollständige Fahrzeuge, die der Unterklasse der Fahrzeuge mit besonderer Zweckbestimmung zugeordnet werden soll)
 \end{itemize}
-	      	      	      	      	      
-	      	      	      	      	      
+
+
 \subsection{Autonomes Fahren}
-	      	      	      	      	      
-Hier wird erklärt was Autonomes Fahren ist
-Was ist autonom 
-Welche Stufen gibt es
-Welche Systeme gibt es
-	      	      	      	      	      
-	      	      	      	      	      
+
+Autonomes fahren ist wenn ein Kraftfahrzeug verwaltungsgemäß selbständig fährt.
+\newline
+Für Kraftfahrzeuge wurden vom SAE Institut in der Norm SAE J3016\footnote{SAE J3016\textunderscore202104 - https://www.sae.org/standards/content/j3016\textunderscore202104} Automatisierungsgrade definiert.
+\begin{itemize}
+	\item Stufe 0 (Keine Automation)
+	\item Stufe 1 (Assistenzsysteme)
+	\item Stufe 2 (Teilautomatisierung)
+	\item Stufe 3 (Bedingte Automatisierung)
+	\item Stufe 4 (Hochautomatisierung)
+	\item Stufe 5 (Vollautomatisierung)
+\end{itemize}
+\subsubsection{Was passiert in den Stufen?}
+Stufe 0
+Fahrer hate keine Assistenzsysteme und ist unter permanenter Kontrolle.
+\newline
+Stufe 1
+Assistenzsysteme wie eine Geschwindigkeitsregelanlage oder eine Berganfahrhilfe unterstützen den Fahrer bei Fahraufgaben.
+\newline
+Stufe 2
+Assistenzsysteme, wie der Spurführungsassistent oder Stauassistent unterstützen den Fahrer bei Fahraufgaben.
+\newline
+Sie können automatisch bremsen, beschleunigen und im Gegensatz zu Level 1 auch das Steuer teilautomatisiert übernehmen.
+
+
+Stufe 3
+Der Fahrer sich unter bestimmten Voraussetzungen dauerhaft vom Verkehrsgeschehen abwenden kann und die Fahraufgabe vollständig an das Kraftfahrzeug delegiert.
+
+Das Kraftfahrzeug ist mittels hochautomatisierter Systeme in der Lage, in bestimmten Verkehrssituationen wie z.B. Autobahnen komplett selbständig zu fahren.
+Der Fahrer muss jedoch innerhalb wenigen Sekunden die Fahraufgabe wieder übernehmen können.
+
+
+Stufe 4
+Das Kraftfahrzeug delegiert den überwiegenden Teil seiner Fahrt selbständig.
+Das Kraftfahrzeug ist in der Lage auch in hochkomplexen Verkehrssituationen wie z. B. plötzlich auftretende Baustellen komplett selbständig zu fahren.
+Der Fahrer muss dennoch fahrtüchtig sein, um im Bedarfsfall die Fahraufgabe übernehmen zu können.
+
+Stufe 5
+Das Fahrzeug übernimmt alle Fahrfunktionen.
+Im Gegensatz zu Level 3 und 4 ist beim völlig autonomen Fahren weder eine Fahrtüchtigkeit noch eine Fahrerlaubnis erforderlich.
+Alle Personen im Wagen werden zu Passagieren, wodurch zum Beispiel auch Menschen mit Handicap neue Möglichkeiten der Mobilität eröffnet werden.
+
+
+
+Das Kraftfahrzeug
+Welche Systeme gibt es?
+
+Beipiele für Assistenzsysteme:
+\begin{itemize}
+	\item Antiblockiersystem (ABS)
+	\item Antriebsschlupfregelung (ASR)
+	\item Berganfahrhilfe
+\end{itemize}
+
+Beipiele für Teilautomatisierung:
+\begin{itemize}
+	\item Spurhalteassistent
+	\item adaptive Geschwindigkeitsregelung
+	\item Berganfahrhilfe
+\end{itemize}
+
 \subsection{Umwelteinflüsse}
-	      	      	      	      	      
+
 Hier wird erklärt was Umwelteinflüsse sind
 Umwelteinflüsse wie Abgas, Lärm, Feinstaub, Licht
 
