--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -1,5 +1,2 @@
-\ac{usa}, \ac{usa}
-
-\ac{eu}, \ac{eu}
-
-\ac{ussr}, \ac{ussr}
+\newacronym{gcd}{GCD}{Greatest Common Divisor}
+\newacronym{lcm}{LCM}{Least Common Multiple}
