--- a/template/document.tex
+++ b/template/document.tex
@@ -10,21 +10,9 @@
 \input{listoffigures.tex}
 %options for tables
 \input{listoftables.tex}
-
-\usepackage{acro}
-
-\DeclareAcronym{usa}{
-  short=USA,
-  long=United States of America,
-}
-\DeclareAcronym{eu}{
-  short=EU,
-  long=European Union,
-}
-\DeclareAcronym{ussr}{
-  short=USSR,
-  long=Union of Soviet Socialist Republics,
-}
+\usepackage[acronym]{glossaries}
+\makeglossaries
+\input{acronyms.tex}
 
 %renewcommand to apply the font
 \renewcommand\familydefault{\sfdefault}
@@ -36,7 +24,7 @@
 \input{titlepage.tex}
 %inhaltsverzeichnis
 \input{inhaltsverzeichnis.tex}
-\input{acronyms.tex}
+
 
 %Inhaltsverzeichnis
 \tableofcontents
@@ -48,9 +36,9 @@
 
 \listoftables
 \addcontentsline{toc}{chapter}{\protect\listtablename}
-\newpage
-\printacronyms
-\addcontentsline{toc}{chapter}{Abkürzungen}
+\printglossary[type=\acronymtype,title=Abkürzungsverzeichnis]
+\addcontentsline{toc}{chapter}{Abkürzungsverzeichnis}
+
 \newpage
 
 \input{pagestyle.tex}
