--- a/template/document.tex
+++ b/template/document.tex
@@ -36,7 +36,7 @@
 
 \listoftables
 \addcontentsline{toc}{chapter}{\protect\listtablename}
-\printglossary[type=\acronymtype,title=Abkürzungsverzeichnis]
+\printglossary[type=\acronymtype,title=Abkürzungsverzeichnis,nonumberlist]
 \addcontentsline{toc}{chapter}{Abkürzungsverzeichnis}
 
 \newpage
