new acronym method

--- a/template/document.tex
+++ b/template/document.tex
@@ -5,20 +5,24 @@
 
 %set the caption to the left side
 \captionsetup{justification=raggedright,singlelinecheck=false}
-
+% Verhindert, dass nur eine Zeile auf der nächsten Seite steht
+\setlength{\marginparwidth}{2cm}
+\usepackage[all]{nowidow}
 %options for figures
 \input{listoffigures.tex}
 %options for tables
 \input{listoftables.tex}
-\usepackage[acronym]{glossaries}
-\makeglossaries
-\input{acronyms.tex}
 
+
+\usepackage{acronym}
+
+\usepackage{lmodern}
 %renewcommand to apply the font
 \renewcommand\familydefault{\sfdefault}
 \setuptoc{toc}{totoc}
 %start the document
 \begin{document}
+
 
 %titlepage
 \input{titlepage.tex}
@@ -36,13 +40,12 @@
 
 \listoftables
 \addcontentsline{toc}{chapter}{\protect\listtablename}
-\printglossary[type=\acronymtype,title=Abkürzungsverzeichnis,nonumberlist]
-\addcontentsline{toc}{chapter}{Abkürzungsverzeichnis}
+\input{acronyms.tex}
+
 
 \newpage
 
 \input{pagestyle.tex}
-s
 %start
 \input{01_einleitung/einleitung.tex}
 \input{02_hauptteil/hauptteil.tex}
