--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -1,2 +1,6 @@
-\newacronym{gcd}{GCD}{Greatest Common Divisor}
-\newacronym{lcm}{LCM}{Least Common Multiple}
+\section*{\fontsize{20}{0} \selectfont Abkürzungsverzeichnis}
+\begin{acronym}[WYSIWYG]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
+	\acro{CO2}{Kohlenstoffdioxid}
+	\acro{WYSIWYG}{What you see is what you get}
+\end{acronym}
+\addcontentsline{toc}{chapter}{Abkürzungsverzeichnis}
