completed autonomes fahren

--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -28,7 +28,7 @@ Je mehr Fahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung d
 
 \textit{Als Kraftfahrzeuge im Sinne dieses Gesetzes gelten Landfahrzeuge, die durch Maschinenkraft bewegt werden, ohne an Bahngleise gebunden zu sein.}
 \footnote{Straßenverkehrsgesetz, § 1 Abs. 2}
-\newline
+\vspace{0.5cm}
 \newline
 Kraftfahrzeuge können in folgende Kategorien eingeteilt werden\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
 	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}:
@@ -42,9 +42,8 @@ Kraftfahrzeuge können in folgende Kategorien eingeteilt werden\footnote{VERORDN
 
 \subsection{Autonomes Fahren}
 
-Autonomes fahren ist wenn ein Kraftfahrzeug verwaltungsgemäß selbständig fährt.
-\newline
-Für Kraftfahrzeuge wurden vom SAE Institut in der Norm SAE J3016\footnote{SAE J3016\textunderscore202104 - https://www.sae.org/standards/content/j3016\textunderscore202104} Automatisierungsgrade definiert.
+Beim autonomen Fahren, fährt ein \ac{Kfz} verwaltungsgemäß selbständig.
+Für \ac{Kfz} wurden von der \ac{SAE} Institut in der Norm SAE J3016\footnote{SAE J3016\textunderscore202104 - https://www.sae.org/standards/content/j3016\textunderscore202104} Automatisierungsgrade definiert.
 \begin{itemize}
 	\item Stufe 0 (Keine Automation)
 	\item Stufe 1 (Assistenzsysteme)
@@ -54,58 +53,102 @@ Für Kraftfahrzeuge wurden vom SAE Institut in der Norm SAE J3016\footnote{SAE J
 	\item Stufe 5 (Vollautomatisierung)
 \end{itemize}
 \subsubsection{Was passiert in den Stufen?}
-Stufe 0
-Fahrer hate keine Assistenzsysteme und ist unter permanenter Kontrolle.
-\newline
-Stufe 1
-Assistenzsysteme wie eine Geschwindigkeitsregelanlage oder eine Berganfahrhilfe unterstützen den Fahrer bei Fahraufgaben.
-\newline
-Stufe 2
-Assistenzsysteme, wie der Spurführungsassistent oder Stauassistent unterstützen den Fahrer bei Fahraufgaben.
-\newline
-Sie können automatisch bremsen, beschleunigen und im Gegensatz zu Level 1 auch das Steuer teilautomatisiert übernehmen.
-
-
-Stufe 3
-Der Fahrer sich unter bestimmten Voraussetzungen dauerhaft vom Verkehrsgeschehen abwenden kann und die Fahraufgabe vollständig an das Kraftfahrzeug delegiert.
-
-Das Kraftfahrzeug ist mittels hochautomatisierter Systeme in der Lage, in bestimmten Verkehrssituationen wie z.B. Autobahnen komplett selbständig zu fahren.
-Der Fahrer muss jedoch innerhalb wenigen Sekunden die Fahraufgabe wieder übernehmen können.
-
-
-Stufe 4
-Das Kraftfahrzeug delegiert den überwiegenden Teil seiner Fahrt selbständig.
-Das Kraftfahrzeug ist in der Lage auch in hochkomplexen Verkehrssituationen wie z. B. plötzlich auftretende Baustellen komplett selbständig zu fahren.
-Der Fahrer muss dennoch fahrtüchtig sein, um im Bedarfsfall die Fahraufgabe übernehmen zu können.
-
-Stufe 5
-Das Fahrzeug übernimmt alle Fahrfunktionen.
-Im Gegensatz zu Level 3 und 4 ist beim völlig autonomen Fahren weder eine Fahrtüchtigkeit noch eine Fahrerlaubnis erforderlich.
-Alle Personen im Wagen werden zu Passagieren, wodurch zum Beispiel auch Menschen mit Handicap neue Möglichkeiten der Mobilität eröffnet werden.
-
-
-
-Das Kraftfahrzeug
-Welche Systeme gibt es?
-
-Beipiele für Assistenzsysteme:
+In der Stufe 0 (Keine Automation):
 \begin{itemize}
-	\item Antiblockiersystem (ABS)
-	\item Antriebsschlupfregelung (ASR)
-	\item Berganfahrhilfe
+	\item keine Assistenzsysteme
+	\item \ac{Kfz} kann keine Fahraufgaben übernehmen
+	\item Fahrer ist unter permanenter Kontrolle
 \end{itemize}
 
-Beipiele für Teilautomatisierung:
+In der Stufe 1 (Assistenzsysteme):
 \begin{itemize}
-	\item Spurhalteassistent
-	\item adaptive Geschwindigkeitsregelung
-	\item Berganfahrhilfe
+	\item Assistenzsysteme wie Geschwindigkeitsregelanlage oder eine Berganfahrhilfe
+	\item Fahrer hat eine passive Unterstützung bei Fahraufgaben
+	\item \ac{Kfz} kann keine Fahraufgaben übernehmen
+	\item Fahrer ist unter permanenter Kontrolle
 \end{itemize}
+
+In der Stufe 2 (Teilautomatisierung):
+\begin{itemize}
+	\item Assistenzsysteme, wie der Spurführungsassistent oder Stauassistent
+	      \begin{itemize}
+		      \item automatisch bremsen
+		      \item automatisch beschleunigen
+		      \item automatisch lenken
+	      \end{itemize}
+	\item \ac{Kfz} kann Fahraufgaben teilautomatisiert übernehmen
+	\item Fahrer kann sich für kurze Zeit von den Fahraufgaben abwenden
+	\item Fahrer muss jeder Zeit die Fahraufgabe übernehmen können
+\end{itemize}
+
+In der Stufe 3 (Bedingte Automatisierung):
+\begin{itemize}
+	\item hochautomatisierte Assistenzsysteme
+	\item \ac{Kfz} kann Fahraufgaben unter bestimmten Voraussetzungen vollständig übernehmen
+	\item Fahrer kann sich unter bestimmten Voraussetzungen dauerhaft von den Fahraufgaben abwenden
+	\item Fahrer muss innerhalb wenigen Sekunden die Fahraufgabe übernehmen können
+\end{itemize}
+
+In der Stufe 4 (Hochautomatisierung):
+\begin{itemize}
+	\item hochautomatisierte Assistenzsysteme
+	\item \ac{Kfz} kann Fahraufgaben in hochkomplexen Verkehrssituationen vollständig übernehmen
+	\item Fahrer dauerhaft von den Fahraufgaben abwenden
+	\item Fahrer muss fahrtüchtig sein, um im Bedarfsfall die Fahraufgabe übernehmen zu können
+\end{itemize}
+
+In der Stufe 5 (Vollautomatisierung):
+\begin{itemize}
+	\item hochautomatisierte Assistenzsysteme
+	\item \ac{Kfz} übernimmt alle Fahraufgaben vollständig
+	\item Fahrer ist nicht erforderlich
+	\item alle Personen im Wagen werden zu Passagieren
+\end{itemize}
+
 
 \subsection{Umwelteinflüsse}
 
-Hier wird erklärt was Umwelteinflüsse sind
-Umwelteinflüsse wie Abgas, Lärm, Feinstaub, Licht
+verkehr benötigt Fläche
+verkehr benötigt Energie
+verkehr stößt Luftschadstoffe aus
+flüchtiger organischer Verbindungen (VOCs), Stickstoffmonoxid (NO), Kohlenmonoxid (CO) sowie dem Treibhausgas Kohlendioxid CO2
+Reifenabrieb, Bodenerosionen und Staubaufwirbelung, erzeugen Autos zudem Feinstaub
+Darüber hinaus trägt der Autoverkehr maßgeblich zur Bildung von bodennahem Ozon bei. In Kombination mit UV-Strahlen, entstehen aus sogenannten primären Schadstoffen, wie Stickoxid und Kohlenmonoxid, gefährliche Photooxidantien – darunter Ozon. Davon abzugrenzen ist allerdings das Ozon in der Stratosphäre, wo es uns vor schädlicher UV-Strahlung schützt.
+In Großstädten, wo der Verkehr dicht und der Treibstoffverbrauch durch ein stetiges Stop-&-Go erhöht ist, ist die Umweltbelastung durch Autoabgase besonders hoch. Bei ungünstigen, windstillen Wetterlagen kann die Luftverschmutzung hier zeitweise so stark werden, dass es zu Smog kommt.
+Folgen für Mensch und Umwelt
+Die Schadstoffemission durch den Verkehr, hat gravierende Folgen für Menschen und Umwelt.
+
+Dazu zählen:
+
+gesundheitliche Probleme, z.B.
+Erkrankungen der Atemwege, z.B. Asthma
+Kopfschmerzen und Konzentrationsschwäche
+Einschränkung der Leistungsfähigkeit
+Herz-Kreislauf-Erkrankungen
+Krebs
+Smog
+Klimawandel
+Umweltverschmutzung, z.B. Eutrophierung von Gewässern und Böden
+dadurch Beeinträchtigung der Ökosysteme
+Ernteschäden durch Ozonbelastung
+Beschädigung von Kulturgütern und Baumaterialien
+
+
+Feinstaubpartikel der Fraktion PM0,1 sind so klein, dass sie nicht nur in unsere Lungenbläschen gelangen, sondern sogar in die Blutlaufbahn. Dadurch können langfristig Herzinfarkte oder Schlaganfälle ausgelöst werden. Dieselruß hingegen, setzt sich in den Schleimhäuten und im Lungengewebe fest, wo sie bei dauerhafter Belastung zu Entzündungen führen[2,3].
+
+Ozon als sekundär gebildeter Luftschadstoff, ist in höheren Konzentrationen toxisch und reizt Atemwege und Schleimhäute. Es gilt als Reizgas und ist insbesondere während langanhaltenden heißen Sommertagen in Städten ein Problem.
+
+
+
+Eine weitere Umweltbelastung stellt das durch Autos emittierte Treibhausgas CO2 dar. Dieses ist zwar ungiftig und birgt somit keine (direkte) gesundheitliche Gefahr, jedoch trägt es maßgeblich zum Klimawandel bei.
+
+Zusätzlich zur Luftverschmutzung führen Autos außerdem zu vielen anderen Problemen. Der Straßenverkehr benötigt kostbare Bodenfläche, verlangt viel Energie und führt zudem zu Lärmverschmutzung mit gesundheitlichen Folgen. So kann chronische Lärmbelastung unter anderem zu Hörschäden und Stress führen[1].
+
+verkehrslärm
+
+
+Altfahrzeuge werden nach der Basler Konvention und der Abfallverbringungsverordnung als gefährliche Abfälle eingestuft und dürfen nur in OECD-Länder exportiert werden. Dennoch gibt es immer wieder Berichte (zum Beispiel bei Frontal21[7] am 31. März 2015), dass nicht nur Gebrauchtfahrzeuge, sondern auch Altfahrzeuge aus Deutschland nach Afrika, Nahost und in östlich der EU gelegene Länder exportiert werden. Dort werden sie, obwohl sie sicherheitstechnisch und abgastechnisch nicht mehr den deutschen Anforderungen entsprechen, oft noch lange Zeit gefahren. Viele Zielländer des Exportes von Gebraucht- und/oder Altfahrzeugen haben inzwischen Einschränkungen oder Verbote erlassen, um den unkontrollierten Import von unsicheren und umweltschädlichen Fahrzeugen zu unterbinden.[8]
+
 
 \subsubsection{Feinstaubbelastung}
 Was ist eine Feinstaubbelastung?
