--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -1,6 +1,12 @@
 \section*{\fontsize{20}{0} \selectfont Abkürzungsverzeichnis}
-\begin{acronym}[WYSIWYG]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
+\begin{acronym}[]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
 	\acro{CO2}{Kohlenstoffdioxid}
-	\acro{WYSIWYG}{What you see is what you get}
+	\acro{Kfz}{Kraftfahrzeug}
+	\acro{Nfz}{Nutzfahrzeug}
+	\acro{Pkw}{Personenkraftwagen}
+	\acro{SAE}{Society of Automotive Engineers}
+
+
+
 \end{acronym}
 \addcontentsline{toc}{chapter}{Abkürzungsverzeichnis}
