--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -114,7 +114,7 @@ verkehr stößt Luftschadstoffe aus
 flüchtiger organischer Verbindungen (VOCs), Stickstoffmonoxid (NO), Kohlenmonoxid (CO) sowie dem Treibhausgas Kohlendioxid CO2
 Reifenabrieb, Bodenerosionen und Staubaufwirbelung, erzeugen Autos zudem Feinstaub
 Darüber hinaus trägt der Autoverkehr maßgeblich zur Bildung von bodennahem Ozon bei. In Kombination mit UV-Strahlen, entstehen aus sogenannten primären Schadstoffen, wie Stickoxid und Kohlenmonoxid, gefährliche Photooxidantien – darunter Ozon. Davon abzugrenzen ist allerdings das Ozon in der Stratosphäre, wo es uns vor schädlicher UV-Strahlung schützt.
-In Großstädten, wo der Verkehr dicht und der Treibstoffverbrauch durch ein stetiges Stop-&-Go erhöht ist, ist die Umweltbelastung durch Autoabgase besonders hoch. Bei ungünstigen, windstillen Wetterlagen kann die Luftverschmutzung hier zeitweise so stark werden, dass es zu Smog kommt.
+In Großstädten, wo der Verkehr dicht und der Treibstoffverbrauch durch ein stetiges Stop-u-Go erhöht ist, ist die Umweltbelastung durch Autoabgase besonders hoch. Bei ungünstigen, windstillen Wetterlagen kann die Luftverschmutzung hier zeitweise so stark werden, dass es zu Smog kommt.
 Folgen für Mensch und Umwelt
 Die Schadstoffemission durch den Verkehr, hat gravierende Folgen für Menschen und Umwelt.
 
