--- a/template/titlepage.tex
+++ b/template/titlepage.tex
@@ -1,6 +1,6 @@
 %variableto fill
 \newcommand{\Thema}{Mein Thema}
-\newcommand{\Name}{Vorname nachname}
+\newcommand{\Name}{Leonardo Ciria Buil}
 \newcommand{\Gutachter}{Dr. Herbert Bauer}
 \newcommand{\Matrikelnummer}{123456}
 \newcommand{\Abgabedatum}{09.01.2022}
