--- a/template/02_hauptteil/hauptteil.tex
+++ b/template/02_hauptteil/hauptteil.tex
@@ -4,7 +4,7 @@
 \section{Forschungsgegenstand im Detail}
 \subsection{Beschreibung des Standes der Technik beim Autonomen Fahren}
 
-Lorem \gls{gcd} \gls{lcm}ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+Lorem \ac{GCD} \ac{LCM}ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 At vero eos et accusam et justo duo dolores et ea rebum.
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 At vero eos et accusam et justo duo dolores et ea rebum.
