--- a/template/packages.tex
+++ b/template/packages.tex
@@ -24,3 +24,9 @@
 \usepackage{graphicx}
 %use inputenc to set the encoding
 \usepackage[utf8]{inputenc}
+%prevent widows and orphans
+\usepackage[all]{nowidow}
+%create acronym
+\usepackage{acronym}
+%change font
+\usepackage{lmodern}
