--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -108,10 +108,25 @@ In der Stufe 5 (Vollautomatisierung):
 
 \subsection{Umwelteinflüsse}
 
-verkehr benötigt Fläche
-verkehr benötigt Energie
-verkehr stößt Luftschadstoffe aus
-flüchtiger organischer Verbindungen (VOCs), Stickstoffmonoxid (NO), Kohlenmonoxid (CO) sowie dem Treibhausgas Kohlendioxid CO2
+\textit{Umwelt bezeichnet etwas, mit dem ein Lebewesen (oder etwas, das in Analogie zu einem Lebewesen behandelt wird) in kausalen Beziehungen steht. Der Umweltbegriff ist zu unterscheiden vom Begriff der Umgebung, der räumlich (und nicht kausal) definiert ist.}\footnote{Ludwig Trepl: Allgemeine Ökologie. Band 1: Organismus und Umwelt. Frankfurt/M., Lang: 106ff.; vgl. 1. Uexküll, Jakob von 1909: Umwelt und Innenwelt der Tiere. Springer, Berlin 2005.}
+
+Einfluss ist eine Wirkung auf ein Subjekt, das eine bestimmte Umweltbedingung erfüllt.
+
+Unter Umwelteinflüssen von \ac{Kfz} fallen \ac{ua}:
+\begin{itemize}
+	\item benötigte Flächen, für Infrastruktur, Parkplätze \ac{usw}
+	\item der Verbrauch von Stoffen um \ac{zb} Energie zu erzeugen oder Fahrbahnen zu enteisen
+	\item der Ausstoß von Gasen die \ac{zb} durch Verbrennung von Kraftstoff oder beim Laden einer Batterie entstehen
+	\item der Verlust von Betriebsmitteln wie \ac{zb} Öl und Kühlwasser durch Leckage von Systemen
+	\item der Ausstoß von festen Stoffe aus wie \ac{ua} Bremsstaub beim Bremsen oder Abrieb der Reifen
+	\item Wäre und Schall durch die Umwadlung von Energie oder Reibung von Komponenten die beim Betrieb des \ac{Kfz} entstehen
+	\item Licht von \ac{Kfz} zur Beleuchtung der Fahrbahn oder Absicherung der Verkehrsführung
+\end{itemize}
+
+
+
+
+flüchtiger organischer Verbindungen (VOCs), \ac{NO}, \ac{CO} sowie dem Treibhausgas \ac{CO2} \ac{NOX}
 Reifenabrieb, Bodenerosionen und Staubaufwirbelung, erzeugen Autos zudem Feinstaub
 Darüber hinaus trägt der Autoverkehr maßgeblich zur Bildung von bodennahem Ozon bei. In Kombination mit UV-Strahlen, entstehen aus sogenannten primären Schadstoffen, wie Stickoxid und Kohlenmonoxid, gefährliche Photooxidantien – darunter Ozon. Davon abzugrenzen ist allerdings das Ozon in der Stratosphäre, wo es uns vor schädlicher UV-Strahlung schützt.
 In Großstädten, wo der Verkehr dicht und der Treibstoffverbrauch durch ein stetiges Stop-u-Go erhöht ist, ist die Umweltbelastung durch Autoabgase besonders hoch. Bei ungünstigen, windstillen Wetterlagen kann die Luftverschmutzung hier zeitweise so stark werden, dass es zu Smog kommt.
@@ -154,6 +169,6 @@ Altfahrzeuge werden nach der Basler Konvention und der Abfallverbringungsverordn
 Was ist eine Feinstaubbelastung?
 Durch natürliche Art oder menschliche erzeugt
 \subsubsection{Co2 Emissionen}
-Was ist Co2?
+Was ist \ac{CO2}?
 Was sind CO2 Emissionen?
 Natürliche CO2 Emissionen oder menschliche CO2 Emissionen
