--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -1,11 +1,19 @@
 \section*{\fontsize{20}{0} \selectfont Abkürzungsverzeichnis}
 \begin{acronym}[]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
-	\acro{CO2}{Kohlenstoffdioxid}
-	\acro{Kfz}{Kraftfahrzeug}
-	\acro{Nfz}{Nutzfahrzeug}
-	\acro{Pkw}{Personenkraftwagen}
-	\acro{SAE}{Society of Automotive Engineers}
+	\acro{Kfz}{\textit{Kraftfahrzeug}}
+	\acro{Nfz}{\textit{Nutzfahrzeug}}
+	\acro{Pkw}{\textit{Personenkraftwagen}}
+	\acro{SAE}{\textit{Society of Automotive Engineers}}
 
+	\acro{CO2}[CO\textsubscript{2}]{\textit{Kohlenstoffdioxid}}
+	\acro{CO}{\textit{Kohlenmonoxid}}
+
+	\acro{NO}{\textit{Stickstoffmonoxid}}
+	\acro{NOX}[NO\textsubscript{X}]{\textit{Stickstoffoxide}}
+
+	\acro{zb}[z.B.]{zum Beispiel}
+	\acro{ua}[u.a.]{unter anderem}
+	\acro{usw}[u.s.w.]{und so weiter}
 
 
 \end{acronym}
