--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -2,5 +2,9 @@
 \begin{acronym}[]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
 	\acro{GCD}{Greatest Common Divisor}
 	\acro{LCM}{Least Common Multiple}
+	
+	\acro{zb}[z.B.]{zum Beispiel}
+	\acro{ua}[u.a.]{unter anderem}
+	\acro{usw}[u.s.w.]{und so weiter}
 \end{acronym}
 \addcontentsline{toc}{chapter}{Abkürzungsverzeichnis}
