--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -170,5 +170,5 @@ Was ist eine Feinstaubbelastung?
 Durch natürliche Art oder menschliche erzeugt
 \subsubsection{Co2 Emissionen}
 Was ist \ac{CO2}?
-Was sind CO2 Emissionen?
-Natürliche CO2 Emissionen oder menschliche CO2 Emissionen
+Was sind \ac{CO2} Emissionen?
+Natürliche \ac{CO2} Emissionen oder menschliche CO2 Emissionen
