--- a/template/03_schluss/schluss.tex
+++ b/template/03_schluss/schluss.tex
@@ -1,4 +1,4 @@
-\chapter{Schluss}
+\chapter{Fazit}
 
 Lorem ipsum dolor sit amet\footnote{Vgl. Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 558.}, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
 At vero eos et accusam et justo duo dolores et ea rebum. 
