--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -2,14 +2,13 @@
 
 \section{Hintergrund und Ausgangssituation}
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum.\footnote{Vgl. Martínez-Díaz, M./Soriguera, F./Pérez, I., Autonomous driving: a bird's eye view, 2019, S. 563} 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large. 
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes. 
-The built-in norms should, as far as possible, be understood and commonly shared.\footnote{Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 557.}
+Seit einigen Jahren hat sich die Welt in das Digitale geändert. Die Kommunikation untereinander geschieht schneller denn je. 
+Meetings werden virtuell veranstaltet und Tätigkeiten digital erledigt. In der aktuellen Lage wird nunmehr erkannt, wie wichtig es ist, mit Computern und ohne direkten Kontakt zu arbeiten.
+Dies führt in einigen Branchen dazu, dass vermehrt Systeme zum Einsatz kommen, die ihre Arbeit selbst verrichten. Zunächst sollen diese Systeme die Arbeit vereinfachen und sicherer gestalten.
+Jedoch sehen Unternehmen in der Künstlichen Intelligenz ein größeres Potenzial. Sie soll einen Umbruch herbeiführen, welches Produktionsketten verschnellert und Kosten senken soll. Fortgeschrittene Unternehmen
+setzen Instrumente der Künstliche Intelligenz in verschiedenen Abteilungen ein.
+
+
 \section{Forschungsziel, Forschungsfrage und These}
 
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
